test/captureClassicalOpAssignLoop3.slq
// args: --run

def main(){
	n:=2;
	k:=0:int[n];
	def foo(){
		for i in 0..3{
			nâŠ•=1; // error
		}
		return n;
	}
	return (foo(),k as ğ”¹^n coerce ğ”¹^2);
}
